--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.6.2",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -61,6 +62,7 @@
     "lucide-react": "^0.446.0",
     "next": "^15.5.3",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.9",
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
