added drop down on admin page, added contractor emaikl reminders, added state abbr to city pages, added follow up emails to get reviews from customers for contractors. added yes no did you complete the job for the customer.

--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,15 @@
         }
       ]
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/contractor-reminders",
+      "schedule": "0 */1 * * *"
+    },
+    {
+      "path": "/api/won-bid-followups",
+      "schedule": "0 */1 * * *"
+    }
   ]
 }
