--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "dotenv": "^17.2.2",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "eslint": "8.49.0",
+    "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.7",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
@@ -84,6 +84,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@types/twilio": "^3.19.2"
   }
 }
